# cpp-ethereum

./: BUILDING_MINGW64  BUILDING_MULTITARGET  BUILDING_MULTITARGET_FULL  CMakeLists.txt  SETTING_UP_CROSSBUILD_ENVIRONMENT  SETTING_UP_PREBUILT_CROSSBUILD_ENVIRONMENT  main.yml  winbuild
alephzero/: MainWin.cpp  alephzero.pro
alethzero/: CMakeLists.txt  MainWin.cpp  alephzero.pro  alethzero.pro
alethzero/res/: alethzero.rc
eth/: CMakeLists.txt  Makefile  main.cpp
libethereum/: BlockChain.cpp  BlockChain.h  CMakeLists.txt  Client.cpp  Client.h  Common.cpp  Common.h  Dagger.cpp  Dagger.h  FileSystem.cpp  FileSystem.h  Makefile  MemTrie.cpp  PeerNetwork.cpp  PeerNetwork.h  RLP.cpp  RLP.h  Signals.h  State.cpp  State.h  Transaction.cpp  Transaction.h  TrieDB.h  vector_ref.h
secp256k1/: CMakeLists.txt  secp256k1.h
test/: CMakeLists.txt  dagger.cpp  peer.cpp
testsignals/: CMakeLists.txt  main.cpp
